--- a/bootstrap_works/BS-Portfolio/index.html
+++ b/bootstrap_works/BS-Portfolio/index.html
@@ -15,7 +15,7 @@
     <!-- profile start -->
     <div class="container-fluid bg-dark p-4">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center">
+            <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center border-border-primary">
                 <div class="text-white">
                     <h5>Hello,My name</h5>
                     <h1 class="fw-bolder mt-2">Anjitha M M</h1>
